force-app/main/default/objects/Wealth360_Field_Mapping__mdt/Wealth360_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Wealth360 Field Mapping</label>
    <pluralLabel>Wealth360 Field Mappings</pluralLabel>
    <description>Configures field mappings between external API and Salesforce objects</description>
</CustomObject>