force-app/main/default/objects/Wealth360_Field_Mapping__mdt/fields/API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Field_Name__c</fullName>
    <description>Field name from the external API response</description>
    <label>API Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>