force-app/main/default/objects/Wealth360_Field_Mapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value if API field is null or missing</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>