force-app/main/default/objects/Wealth360_Field_Mapping__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Salesforce object type (Portfolio, Holding, Transaction)</description>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>