force-app/main/default/objects/Wealth360_Field_Mapping__mdt/fields/Salesforce_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Name__c</fullName>
    <description>Salesforce field API name to map to</description>
    <label>Salesforce Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>